--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@ img {
 
 /* Custom CSS for pages */
 .figcenter {
-  text-align: center;
+  text-align: center !important;
 }
 .fig img {
   max-width: 98%;
