besseres syntax highlighting

--- a/_layouts/presentation.html
+++ b/_layouts/presentation.html
@@ -45,7 +45,7 @@
       var slideshow = remark.create({
         navigation: {scroll: false,},
         highlightLanguage: 'java',
-        highlightStyle: 'monokai',
+        highlightStyle: 'github',
         highlightLines: true,
         highlightSpans: true
       });
